--- a/main.ipynb
+++ b/main.ipynb
@@ -3,24 +3,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-22T09:55:29.518243Z",
-     "start_time": "2025-09-22T09:55:29.514283Z"
+     "end_time": "2025-09-22T10:32:37.492713Z",
+     "start_time": "2025-09-22T10:32:37.488837Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.ensemble import RandomForestRegressor\n"
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.preprocessing import StandardScaler\n"
    ],
    "id": "ad20110c666549ac",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 21
   },
   {
    "metadata": {
@@ -64,24 +64,61 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-22T09:59:49.215098Z",
-     "start_time": "2025-09-22T09:59:49.154078Z"
+     "end_time": "2025-09-22T10:16:44.701791Z",
+     "start_time": "2025-09-22T10:16:44.633013Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "X_simple = df[['rm']].values\n",
-    "Y_simple = df[['medv']].values\n",
+    "print(df.describe().T[['mean', 'std', 'min', 'max']])\n",
+    "corrs = df.corr()['medv'].sort_values(ascending=False)\n",
+    "print(corrs)\n",
     "\n",
-    "plt.figure(figsize = (10,6))\n",
-    "plt.scatter(X_simple, Y_simple, alpha = 0.5)\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.scatter(df['rm'], df['medv'], alpha = 0.5)\n",
     "plt.xlabel('rooms')\n",
     "plt.ylabel('median price')\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.show()"
    ],
-   "id": "6361cc9f32e428f0",
+   "id": "392ad4a5a4705374",
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               mean         std        min       max\n",
+      "crim       3.360341    7.352272    0.00632   73.5341\n",
+      "zn        10.689189   22.674762    0.00000  100.0000\n",
+      "indus     11.293483    6.998123    0.74000   27.7400\n",
+      "chas       0.060060    0.237956    0.00000    1.0000\n",
+      "nox        0.557144    0.114955    0.38500    0.8710\n",
+      "rm         6.265619    0.703952    3.56100    8.7250\n",
+      "age       68.226426   28.133344    6.00000  100.0000\n",
+      "dis        3.709934    1.981123    1.12960   10.7103\n",
+      "rad        9.633634    8.742174    1.00000   24.0000\n",
+      "tax      409.279279  170.841988  188.00000  711.0000\n",
+      "ptratio   18.448048    2.151821   12.60000   21.2000\n",
+      "black    359.466096   86.584567    3.50000  396.9000\n",
+      "lstat     12.515435    7.067781    1.73000   37.9700\n",
+      "medv      22.768769    9.173468    5.00000   50.0000\n",
+      "medv       1.000000\n",
+      "rm         0.689598\n",
+      "zn         0.344842\n",
+      "black      0.336660\n",
+      "dis        0.249422\n",
+      "chas       0.204390\n",
+      "rad       -0.352251\n",
+      "age       -0.358888\n",
+      "crim      -0.407454\n",
+      "nox       -0.413054\n",
+      "tax       -0.448078\n",
+      "indus     -0.473932\n",
+      "ptratio   -0.481376\n",
+      "lstat     -0.738600\n",
+      "Name: medv, dtype: float64\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -96,46 +133,54 @@
      }
     }
    ],
-   "execution_count": 10
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-22T10:12:25.742751Z",
-     "start_time": "2025-09-22T10:12:25.720467Z"
+     "end_time": "2025-09-22T10:34:20.026500Z",
+     "start_time": "2025-09-22T10:34:20.011541Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "print(df.describe().T[['mean', 'std', 'min', 'max']])\n",
-    "corrs = df.corr()['medv'].sort_values(ascending=False)"
+    " features = [c for c in df.columns if c != 'medv']\n",
+    " X = df[features]\n",
+    " y = df['medv']\n",
+    "\n",
+    " X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    " pipe = Pipeline([\n",
+    "     ('scaler', StandardScaler()),\n",
+    "     ('model', LinearRegression())\n",
+    " ])\n",
+    "\n",
+    " pipe.fit(X_train, y_train)\n",
+    " y_pred = pipe.predict(X_test)\n",
+    " mse = mean_squared_error(y_test, y_pred)\n",
+    " rmse = np.sqrt(mse)\n",
+    " mae = mean_absolute_error(y_test, y_pred)\n",
+    " r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    " print(f\"MSE : {mse}\")\n",
+    " print(f\"RMSE : {rmse}\")\n",
+    " print(f\"MAE : {mae}\")\n",
+    " print(f\"R2 : {r2}\")"
    ],
-   "id": "392ad4a5a4705374",
+   "id": "79221c25973e1410",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               mean         std        min       max\n",
-      "ID       250.951952  147.859438    1.00000  506.0000\n",
-      "crim       3.360341    7.352272    0.00632   73.5341\n",
-      "zn        10.689189   22.674762    0.00000  100.0000\n",
-      "indus     11.293483    6.998123    0.74000   27.7400\n",
-      "chas       0.060060    0.237956    0.00000    1.0000\n",
-      "nox        0.557144    0.114955    0.38500    0.8710\n",
-      "rm         6.265619    0.703952    3.56100    8.7250\n",
-      "age       68.226426   28.133344    6.00000  100.0000\n",
-      "dis        3.709934    1.981123    1.12960   10.7103\n",
-      "rad        9.633634    8.742174    1.00000   24.0000\n",
-      "tax      409.279279  170.841988  188.00000  711.0000\n",
-      "ptratio   18.448048    2.151821   12.60000   21.2000\n",
-      "black    359.466096   86.584567    3.50000  396.9000\n",
-      "lstat     12.515435    7.067781    1.73000   37.9700\n",
-      "medv      22.768769    9.173468    5.00000   50.0000\n"
+      "MSE : 23.48673519542581\n",
+      "RMSE : 4.846311504167454\n",
+      "MAE : 3.617505066454133\n",
+      "R2 : 0.739031586042544\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 38
   }
  ],
  "metadata": {
